--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -184,6 +184,13 @@
                 android:layout_height="wrap_content"
                 android:text="PREDICTION"
                 android:textSize="24sp"/>
+            <Button
+                android:id="@+id/testcenters_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Test Centers"
+                android:layout_marginLeft="5dp"
+                android:textSize="22sp"/>
         </LinearLayout>
 
     </LinearLayout>
