--- a/app/src/main/res/layout/list_row_member.xml
+++ b/app/src/main/res/layout/list_row_member.xml
@@ -4,22 +4,53 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
+    android:layout_margin="5dp"
     android:padding="4dp">
-
-    <View
-        android:layout_width="8dp"
-        android:layout_height="8dp"
-        android:layout_marginStart="24dp"
-        android:background="#D81B60"/>
-
-    <TextView
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_name"
-        android:layout_marginStart="8dp"
-        android:textColor="@color/black"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+        android:gravity="left"
+        android:layout_marginRight="5dp"
+        android:orientation="horizontal">
+        <View
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_marginTop="9dp"
+            android:background="#D81B60"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_name1"
+            android:layout_marginLeft="4dp"
+            android:textColor="@color/black"
+            android:textSize="16sp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="end">
+        <View
+            android:layout_width="8dp"
+            android:layout_height="8dp"
+            android:layout_marginTop="9dp"
+            android:background="#D81B60"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_name2"
+            android:textColor="@color/black"
+            android:layout_marginLeft="4dp"
+            android:textSize="16sp"
+            />
+
+
+    </LinearLayout>
+
 
 
 </LinearLayout>
